[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "punch-o-meter"
version = "0.1.0"

[dependencies]
m = "0.1.1"
aux16 = { path = "auxiliary" }
cortex-m = "0.5.6"
cortex-m-rt = "0.6.3"

[dev-dependencies]
panic-semihosting = "0.5.1"


[dev-dependencies.stm32f30x-hal]
version = "0.2.0"
features = ["rt"]

[features]
rt = ["stm32f30x-hal/rt"]